--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "codedge/laravel-fpdf": "^1.12",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.28",
