--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "pxlrbt/filament-excel": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
